# tech-blog-generator

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  REAME.md  app.py  pyproject.toml
const/: const.py  prompt.py
static/css/: pygments.css  style.css
static/js/: main.js
templates/: index.html  preview.html  preview_outline.html
