[tool.poetry]
name = "auto-blog"
version = "0.1.0"
description = ""
authors = ["nibura2002 <nibura2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.18"
langchain-community = "^0.3.17"
langchain-openai = "^0.3.5"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
werkzeug = "^3.1.3"
markdown = "^3.7"
gunicorn = "^23.0.0"
autopep8 = "^2.3.2"
pre-commit = "^4.1.0"

[[tool.poetry.packages]]
include = "const"
from = "."  # ← プロジェクトルート（"Auto-blog"）から探す

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
